<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:paddingTop="?android:attr/actionBarSize"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingBottom="12dp"
        android:layout_height="wrap_content">

        <de.tum.mitfahr.widget.FloatLabelLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:floatLabelTextAppearance="@style/TextAppearance.FloatLabel">

            <EditText
                android:id="@+id/fromSearchEditText"
                android:inputType="textAutoComplete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/from" />
        </de.tum.mitfahr.widget.FloatLabelLayout>

        <de.tum.mitfahr.widget.FloatLabelLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:floatLabelTextAppearance="@style/TextAppearance.FloatLabel">

            <EditText
                android:id="@+id/toSearchEditText"
                android:inputType="textAutoComplete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/to" />

        </de.tum.mitfahr.widget.FloatLabelLayout>

        <Button
            android:id="@+id/pickTimeSearchButton"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_time" />

        <Button
            android:id="@+id/pickDateSearchButton"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_date" />

        <Button
            android:id="@+id/searchButton"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search" />
    </LinearLayout>
</ScrollView>