<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:paddingTop="?android:attr/actionBarSize"
    android:layout_height="match_parent">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingBottom="12dp"
        android:layout_height="wrap_content">

        <de.tum.mitfahr.widget.FloatLabelLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:floatLabelTextAppearance="@style/TextAppearance.FloatLabel">

            <AutoCompleteTextView
                android:id="@+id/departureText"
                android:inputType="textNoSuggestions"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:scrollHorizontally="true"
                android:nextFocusDown="@+id/destinationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/departure" />
        </de.tum.mitfahr.widget.FloatLabelLayout>

        <de.tum.mitfahr.widget.FloatLabelLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:floatLabelTextAppearance="@style/TextAppearance.FloatLabel">

            <AutoCompleteTextView
                android:id="@id/destinationText"
                android:inputType="textNoSuggestions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:scrollHorizontally="true"
                android:nextFocusDown="@+id/meetingText"
                android:hint="@string/destination" />
        </de.tum.mitfahr.widget.FloatLabelLayout>

        <de.tum.mitfahr.widget.FloatLabelLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:floatLabelTextAppearance="@style/TextAppearance.FloatLabel">

            <AutoCompleteTextView
                android:id="@id/meetingText"
                android:inputType="textNoSuggestions"
                android:layout_width="match_parent"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:ellipsize="end"
                android:scrollHorizontally="true"
                android:nextFocusDown="@+id/seatsText"
                android:layout_height="wrap_content"
                android:hint="@string/meeting_point" />
        </de.tum.mitfahr.widget.FloatLabelLayout>

        <de.tum.mitfahr.widget.FloatLabelLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:floatLabelTextAppearance="@style/TextAppearance.FloatLabel">

            <EditText
                android:id="@id/seatsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/free_seats" />
        </de.tum.mitfahr.widget.FloatLabelLayout>

        <Button
            android:id="@+id/pickTimeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/pick_time" />

        <Button
            android:id="@+id/pickDateButton"
            android:layout_width="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"
            android:text="@string/pick_date" />

        <Spinner
            android:id="@+id/rideTypeSpinner"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"
            android:hint="@string/ride_type" />

        <Button
            android:id="@+id/offerRideButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/offer_ride" />
    </LinearLayout>
</ScrollView>
